# empty-project

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  appveyor.yml
include/: foo.h
include/foo/: bar.h
src/: bar.c
test/: CMakeLists.txt  bar.c
